What's new...

Sept 12/2020 : JF 26.1 released
  - jfBackup/0.17
    - fix : NPEs and ABEs

Sept 5/2020 : JF 26.0 released
  - fix : support JDK15
  - jfControls/0.7
    - fix : many issues
  - jfBackup/0.16
    - fix : error handling
    - new : added client status page

Aug 28/2020 : JF 25.2 released
  - VoIP/SIP
    - fix : ACK only for INVITE related requests
    - new : ignore 481 (unknown call leg)
  - jfPhone/1.20
    - improved SIP handling
    - fixes issue #4 (Cant make Phonecalls over AVM Fritzbox 7590)

Aug 26/2020 : JF 25.1 released
  - jfDVR/0.10
    - fix : use proper endianness of PLC tags
  - jfControls/0.6
    - fix : NPE
    - fix : get panel by name

Aug 3/2020 : JF 25.0 released
  - completed ARM64 support
    - Arm Neon is much better API and data types compared to Intel's SSE
    - download Raspberry PI images from raspi.debian.net
    - images from raspberrypi.org are:
      - only 32bit (64bit beta still uses 32bit apps)
      - package names are different requiring modified scripts
      - packages are old (Chromium 78 suffers from major bugs)
      - progress is slow
    - images from ubuntu are:
      - slow - they load too many services trying to make the PI a server
        - unattended-upgrades kills the system
      - some of their packages are foobar
        - lightdm auto-login never works for me
        - cloud-init is a PITA
      - if you must, run this asap and then reboot:
        - apt remove unattended-upgrades cloud-init
  - jfPasswords/0.24
    - recreate tray icon each time app is opened
      - in Windows the tray icon gets re-scaled each time the screen resolution changes
        which makes it look corrupted over time
  - jfEdit/0.18
    - fix line ending detection

July 8/2020 : JF 24.0 released
  - jfDVR/0.9
    - new : take pictures from cameras triggered by PLC tag
  - jfControls/0.5
    - major rewrite, no longer uses Java compiler
    - better performance

June 17/2020 : JF 23.1 released
  - jfBackup/0.15