@@ -1,5 +1,12 @@
 What's new...
 
+Sept 16/2020 : JF 27.0 released
+  - jfSOCKS/0.3
+    - new : added SOCKS4a/5 support
+    - new : added SSL support
+    - new : added config tool
+    - new : added client tool (redirs local port thru socks server to remote ip)
+
 Sept 12/2020 : JF 26.1 released
   - jfBackup/0.17
     - fix : NPEs and ABEs
